2005-12-04  Bruno Haible  <bruno@clisp.org>

	* csharpexec.m4 (gt_CSHARPEXEC): Add support for 'clix' launcher
	(untested).

2005-12-04  Bruno Haible  <bruno@clisp.org>

	* csharpcomp.m4 (gt_CSHARPCOMP): Also set CSHARPCOMPFLAGS.

2005-11-24  Bruno Haible  <bruno@clisp.org>

	Cygwin portability.
	* relocatable.m4 (AC_RELOCATABLE): Require AC_EXEEXT. Arrange to set
	RELOC_EXEEXT while invoking install-reloc.

2005-09-20  Bruno Haible  <bruno@clisp.org>

	* bison-i18n.m4: New file, from bison-2.1.
	* Makefile.am (EXTRA_DIST): Add it.

2005-08-23  Bruno Haible  <bruno@clisp.org>

	* byteswap.m4: New file, from gnulib.
	* Makefile.am (EXTRA_DIST): Add byteswap.m4.

2005-08-13  Bruno Haible  <bruno@clisp.org>

	* java.m4: New file.
	* Makefile.am (EXTRA_DIST): Add it.

2005-08-16  Bruno Haible  <bruno@clisp.org>

	* strcase.m4: Remove file.
	* Makefile.am (EXTRA_DIST): Remove it.

2005-07-24  Bruno Haible  <bruno@clisp.org>

	Tidy up exported symbols.
	* Makefile.am (aclocal_DATA): Add visibility.m4.

2005-07-16  Bruno Haible  <bruno@clisp.org>

	* Makefile.am (aclocal_DATA): Add lock.m4.

2005-07-05  Bruno Haible  <bruno@clisp.org>

	* relocatable.m4 (AC_RELOCATABLE): On mingw, simply set
	SET_RELOCATABLE to a trivial value.

2005-07-05  Bruno Haible  <bruno@clisp.org>

	* mbrtowc.m4 (gl_FUNC_MBRTOWC): Upgrade to version from current
	autoconf CVS. Needed for mingw.

2005-05-01  Bruno Haible  <bruno@clisp.org>

	* csharpexec-test.exe: New file.
	* csharpexec.m4 (gt_CSHARPEXEC): Test whether the C# engine can execute
	it.
	* Makefile.am (examplesbuildaux_DATA, EXTRA_DIST): Add
	csharpexec-test.exe.

2005-05-01  Bruno Haible  <bruno@clisp.org>

	* csharpcomp.m4 (gt_CSHARPCOMP): Check that cscc can actually compile
	a trivial program.
	Reported by Pierre <pierre42d@9online.fr>.

2005-05-23  Bruno Haible  <bruno@clisp.org>

	* gettext-0.14.5 released.

2005-04-11  Bruno Haible  <bruno@clisp.org>

	* gettext-0.14.4 released.

2005-03-22  Bruno Haible  <bruno@clisp.org>
